<resources>
    <string name="app_name">AroundU</string>

    <!--EXCEPTIONS-->
    <string name="JSONException">An error occurred with JSON</string>
    <string name="error_get_all_points_of_interest_exception">An error occurred while getting points of interest data</string>
    <string name="error_gps_permission">"Give permission to access location"</string>


    <string name="busNumberLabel">NUMÉRO</string>
    <string name="busDestinationLabel">DESTINATION</string>
    <string name="departureHourLabel">DÉPART</string>
    <string name="arrivalHourLabel">ARRIVÉE</string>
    <string name="busNumberLabelCropped">N°</string>
    <string name="busDestinationLabelCropped">DESTINATION</string>
    <string name="departureHourLabelCropped">DÉP</string>
    <string name="arrivalHourLabelCropped">ARR</string>
    <string name="description_text_default">Sélectionnez un point d\'intérêt et scannez votre téléphone sur la borne pour en savoir plus!</string>
    <string name="description_text_pi_selected">Scannez votre téléphone sur la borne pour en savoir plus!</string>
    <string name="noPIsErrorMessage">Nous n\'avons pas trouvé de points d\'intérêt à proximité de ce trajet :/ essayez en un autre ! :D</string>

</resources>
