<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="unamur.buspanelapp.Activity.MainActivity">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/yellowTEC">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/busNumberLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:text="@string/busNumberLabel"
                        android:textSize="@dimen/columnTitle"
                        android:textStyle="bold"
                        android:textColor="@color/redTEC"
                        android:gravity="center"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grayTEC" />

                    <TextView
                        android:id="@+id/busDestinationLabel"
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/busDestinationLabel"
                        android:textSize="@dimen/columnTitle"
                        android:textStyle="bold"
                        android:textColor="@color/redTEC"
                        android:gravity="center_vertical"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grayTEC" />

                    <TextView
                        android:id="@+id/departureHourLabel"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:text="@string/departureHourLabel"
                        android:textSize="@dimen/columnTitle"
                        android:textStyle="bold"
                        android:textColor="@color/redTEC"
                        android:gravity="center"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grayTEC" />

                    <TextView
                        android:id="@+id/arrivalHourLabel"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:text="@string/arrivalHourLabel"
                        android:textSize="@dimen/columnTitle"
                        android:textStyle="bold"
                        android:textColor="@color/redTEC"
                        android:gravity="center"/>

                </LinearLayout>
                <ListView
                    android:id="@+id/listBuses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@color/lightGrayTEC"
                    android:divider="@color/grayTEC"
                    android:dividerHeight="6dp"/>
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:id="@+id/fullScreenFirstScreenBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/full_screen"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/displayable"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        android:background="@color/grayTEC">
        <ScrollView
            android:id="@+id/scrollViewFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/piDescription">
                <FrameLayout
                    android:id="@+id/wayDetails"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_width="match_parent"/>
        </ScrollView>
        <TextView
            android:id="@+id/piDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/description_text_default"
            android:background="@drawable/scan_tips_selector"/>
    </RelativeLayout>
    <!--<LinearLayout
        android:id="@+id/wayDetails"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:visibility="gone">

        &lt;!&ndash;<fragment
                    android:name="unamur.buspanelapp.Activity.DetailsFragment"
                    android:id="@+id/wayDetailsFrag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>&ndash;&gt;
    </LinearLayout>-->
</LinearLayout>
